--- a/src/templates/auth/register.html
+++ b/src/templates/auth/register.html
@@ -70,7 +70,7 @@
                     <button class="btn full-width" type="submit" id="send">Unirme a WePlot</button>
                 </div>
                 <div class="input-group full-width">
-                    <p>¿Ya tienes cuenta? <a href="login.php"class="span">Inicia sesión aquí</a></p>
+                    <p>¿Ya tienes cuenta? <a href="login.html"class="span">Inicia sesión aquí</a></p>
                 </div>
             </form>
         </div>
