--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/login.css" />
+    <link rel="stylesheet" href="static/css/login.css" />
     <title>WePlot</title>
 </head>
 <body>
     <div class="container">
         <div class="image-container">
-            <img class="img" src="images/login.png" alt="Imagen de registro" />
+            <img class="img" src="static/images/login.png" alt="Imagen de registro" />
         </div>
         <div class="login-info-container">
             <h1 class="title">Inicia sesión en <span class="title-1">WePlot</span></h1>
@@ -26,7 +26,7 @@
                     <button class="btn full-width" type="submit" id="send">Iniciar sesión</button>
                 </div>
                 <div class="input-group full-width">
-                    <p>¿No tienes cuenta? <a href="register.php" class="span">Regístrate aquí</a></p>
+                    <p>¿No tienes cuenta? <a href="register.html" class="span">Regístrate aquí</a></p>
                 </div>
             </form>
         </div>
