--- a/src/static/css/login.css
+++ b/src/static/css/login.css
@@ -138,7 +138,40 @@ body {
 	border-width: 0px;
 	border-style: solid;
 }
-
+.alert {
+	padding: 15px;
+	margin-bottom: 20px;
+	border: 1px solid transparent; 
+	border-radius: 4px;
+	background-color: #f5f5f5; /* Color de fondo neutro */
+	border-color: #d6d8db; /* Borde ligeramente más oscuro */
+	color: #31708f; /* Color de texto para mensajes informativos */
+  }
+  
+  .alert strong {
+	font-weight: bold;
+  }
+  
+  .close-button {
+	float: right;
+	font-size: 21px;
+	font-weight: bold;
+	line-height: 1;
+	color: #000;
+	text-shadow: 0 1px 0 #fff;
+	opacity: .2;
+	cursor: pointer;
+	background: transparent;
+	border: 0;
+	padding: 0;
+  }
+  
+  .close-button:hover {
+	color: #000;
+	text-decoration: none;
+	opacity: .5;
+  }
+  
 @media (max-width: 1080px) {
 	.container {
 		flex-direction: column;
